EWL-10039: Media image caption wrap fix.

--- a/styleguide/source/assets/scss/05-pages/_news.scss
+++ b/styleguide/source/assets/scss/05-pages/_news.scss
@@ -198,6 +198,12 @@
       .media-caption {
         max-width: fit-content;
       }
+
+      &.image {
+        .media-caption {
+          max-width: 220px;
+        }
+      }
     }
 
     + .ama-toc-link {
